# hiorder_gcp_3d

./: .gitignore  AGENTS.md  README.md  cone_convex_hull.py  cone_convex_hull.txt  cone_convex_hull_cpp.py  extrema_viz.py  geometry.py  geometry_connectivity_numba.py  idx_vs_dict.py  implementation.txt  implementation_plan.txt  potential.py  potential_cpp.py  potential_definition.tex  potential_numba.py  potential_parameters_numba.py  predicates.py  pyvista_isosurfaces.ipynb  simplified_potential_numba.py  visualize_cone_convex_hull.py  viz.py
cpp/: CMakeLists.txt  README.md  collision_mesh.cpp  collision_mesh.hpp  cone_convex_hull.hpp  cone_convex_hull_cpp.cpp  eigen_ext.hpp  eigen_ext.tpp  potential_collision_mesh.cpp  potential_collision_mesh.hpp  potential_cpp.cpp  potential_cpp.hpp  potential_cpp_bindings.cpp  potential_impl.hpp  potential_tinyad.cpp  predicates_c.h
cpp/common/: collision_mesh.hpp  cone_convex_hull.cpp  geometry_connectivity.hpp  potential_parameters.hpp
cpp/simplified_smoothed_offset_potential/: simplified_potential.cpp  simplified_potential.hpp  simplified_potential_bindings.cpp  simplified_potential_impl.hpp  simplified_potential_tinyad.cpp  simplified_potential_vtk.cpp
cpp/smoothed_offset_potential/: potential.cpp  potential.hpp  potential_bindings.cpp  potential_impl.hpp  potential_tinyad.cpp  potential_vtk.cpp
cpp/tests/: collision_mesh_test.cpp
scripts/: generate_visualizations.py  verify_outside_checks.py  visualize_cone_convex_hull.py
tests/: conftest.py  test_cone_convex_hull.py  test_cone_convex_hull_cpp.py  test_geometry.py  test_pointed_vertices_cpp.py  test_potential.py  test_potential_cpp.py  test_potential_numba.py  test_potential_regression.py  test_potential_tinyad.py  test_simplified_potential_numba.py  test_simplified_potential_tinyad.py
tests/data/: potential_regression.npz
